# PyAnEn 0.3.3

- Added verification classes for deterministic, probabilistic, and ensemble forecasts
- Added progress bar from tqdm
- Added unit tests

# PyAnEn 0.2.1

- Added new module `Grid`
- Add name decoding to `IO.open_dataset` when `num_chars` is present. This dataset is usually generated from `R`.

# PyAnEn 0.1.2

- Deep copy values from root groups when opening files to avoid IO errors
- Added `IO.open_dataset`
- Added verification functions: `crps`, `bias`, and `bias`
- Initialized the project